--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <form action="addmessage.php" method="POST">
         <input type="text" id="input" name="message" placeholder="Введите сообщение">
         <input type="hidden" name="numberOfMessages" id="numberOfMessages">
-        <input type="submit" id="sendButton" value="Отправить">
+        <input type="submit" id="sendButton" value="Сохранить">
         <button id="transButton">Транслитерировать</button>
     </form>
     <div>
